--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,10 +5,13 @@ experiment:
 
 default_config: config.yaml
 
+execution:
+  run_group_size: 4
+
 init_times: 
-  start: 2020-01-01T06:00
-  end: 2020-10-28T18:00
-  frequency: 6h
+  start: 2020-01-01T12:00
+  end: 2020-10-29T00:00
+  frequency: 12h
 
 locations:
   mlflow_uri: https://servicedepl.meteoswiss.ch/mlstore
