--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,11 +5,15 @@ experiment:
 
 default_config: config.yaml
 
+execution:
+  run_group_size: 4
+
 init_times: 
-  start: 2020-01-01T06:00
-  end: 2020-10-28T18:00
-  frequency: 6h
+  start: 2020-01-01T12:00
+  end: 2020-01-10T00:00
+  frequency: 18h
 
 locations:
+  output_root: output
   mlflow_uri: https://servicedepl.meteoswiss.ch/mlstore
-  # mlflow_uri: https://mlflow.ecmwf.int
+  # mlflow_uri: https://mlflow.ecmwf.int 
