add rule to extract cosmoe data from archive

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -11,6 +11,7 @@ configfile: "config/config.yaml"
 # load rules
 # -----------------------------------------------------
 include: "rules/common.smk"
+include: "rules/data.smk"
 include: "rules/inference.smk"
 include: "rules/verif.smk"
 
@@ -32,6 +33,7 @@ onerror:
 # target rules
 # -----------------------------------------------------
 rule all:
+    """Final target rule to run all necessary steps."""
     input:
         expand(
             "results/eval_report_{run_id}.html", run_id=config["experiment"]["run_id"]
@@ -41,9 +43,16 @@ rule all:
 
 
 rule run_inference_all:
+    """Run inference for all reference times as defined in the configuration."""
     input:
         expand(
             OUT_ROOT / "{run_id}/{init_time}/raw",
             init_time=[t.strftime("%Y%m%d%H%M") for t in REFTIMES],
             run_id=config["experiment"]["run_id"]
         )
+
+
+rule extract_cosmoe_fcts_all:
+    """Extract COSMO-E forecasts for the year 2020."""
+    input:
+        expand(rules.extract_cosmoe_fcts.output.fcts, year=[str(y)[-2:] for y in range(2020, 2021)])
