--- a/config/config.yaml
+++ b/config/config.yaml
@@ -18,3 +18,6 @@ locations:
   mlflow_uri: 
     - https://servicedepl.meteoswiss.ch/mlstore
     - https://mlflow.ecmwf.int
+
+studies:
+  - cosmo2_emulator_bestmodel
