--- a/workflow/envs/anemoi_inference.yaml
+++ b/workflow/envs/anemoi_inference.yaml
@@ -2,11 +2,10 @@ name: anemoi_inference
 channels:
   - conda-forge
 dependencies:
-  - python=3.12
-  - toml
-  - uv
-  - mlflow
-  - pip
+  - python=3.12.8
+  - uv=0.6.3
+  - mlflow=2.21.1
+  - pip=25.1.1
   - pip:
-      - anemoi-utils
-      - anemoi-training --no-deps
+      - anemoi-utils==0.4.27
+      # - anemoi-training --no-deps
