--- a/config/config.yaml
+++ b/config/config.yaml
@@ -11,9 +11,9 @@ init_times:
 lead_time: 120h
 
 runs:
-  # test:
-    # run_id: 7c58e59d24e949c9ade3df635bbd37e2
-    # label: Test run
+  # stage_C_transfer-cerra-N320_rollout-low_lam:
+  #   run_id: 1054752f57694b53962bc28de7507dff
+  #   label: Stage C - N320 global grid with CERRA-rollout finetuning - low LAM weight
   stage_D-cerra-N320:
     run_id: 2f962c89ff644ca7940072fa9cd088ec
     label: Stage D - N320 global grid with CERRA finetuning
