--- a/workflow/envs/anemoi_inference.yaml
+++ b/workflow/envs/anemoi_inference.yaml
@@ -2,10 +2,9 @@ name: anemoi_inference
 channels:
   - conda-forge
 dependencies:
-  - python=3.12
-  - toml
-  - uv
-  - mlflow
-  - pip
+  - python=3.12.8
+  - uv=0.6.3
+  - mlflow=2.21.1
+  - pip=25.1.1
   - pip:
       - anemoi-utils[mlflow]>=0.4.28
