--- a/environment.yaml
+++ b/environment.yaml
@@ -2,9 +2,6 @@
 name: evalml
 channels:
   - conda-forge
-  - bioconda
 dependencies:
-  - snakemake
-  - snakefmt
-  - snakemake-executor-plugin-slurm
+  - python=3.12
   - uv
