--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
     { name = "Francesco Zanetta", email = "francesco.zanetta@meteoswiss.ch" },
     { name = "Daniele Nerini", email = "daniele.nerini@meteoswiss.ch" },
 ]
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 dependencies = ["snakemake", "snakemake-executor-plugin-slurm", "click"]
 
 [project.scripts]
@@ -16,3 +16,8 @@ evalml = "evalml:cli"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "snakefmt>=0.11.0",
+]
