--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,7 +2,7 @@
 description: |
   This is an experiment to do blabla.
 
-init_times: 
+dates: 
   start: 2020-01-01T12:00
   end: 2020-01-10T00:00
   # end: 2020-03-30T00:00
