--- a/config/config.yaml
+++ b/config/config.yaml
@@ -33,9 +33,9 @@ locations:
     - https://mlflow.ecmwf.int
   
 profile:
-  software-deployment-method: conda
+  software_deployment_method: conda
   executor: slurm
-  default-resources:
+  default_resources:
       slurm_partition: "postproc"
       cpus_per_task: 1
       mem_mb_per_cpu: 1800
