--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,14 @@ authors = [
     { name = "Daniele Nerini", email = "daniele.nerini@meteoswiss.ch" },
 ]
 requires-python = ">=3.11"
-dependencies = ["snakemake", "snakemake-executor-plugin-slurm", "click"]
+dependencies = [
+    "snakemake",
+    "snakemake-executor-plugin-slurm",
+    "click",
+    "meteodata-lab>=0.4.0",
+    "anemoi-datasets>=0.5.25",
+    "mlflow>=3.1.1",
+]
 
 [project.scripts]
 evalml = "evalml:cli"
@@ -19,5 +26,6 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
+    "pre-commit>=4.2.0",
     "snakefmt>=0.11.0",
 ]
