--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -40,7 +40,7 @@ EXPERIMENT_HASH = short_hash_config()
 rule all:
     """Final target rule to run all necessary steps."""
     input:
-        OUT_ROOT / f"results/{EXPERIMENT_HASH}/report.html",
+        OUT_ROOT / f"results/{EXPERIMENT_HASH}/dashboard.html",
         OUT_ROOT / f"results/{EXPERIMENT_HASH}/plot_metrics"
     default_target: True
 
