--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,8 @@ dev = [
     "pre-commit>=4.2.0",
     "snakefmt>=0.11.0",
 ]
+
+[tool.pytest.ini_options]
+markers = [
+    "longtest: mark tests that take a long time to run, e.g. integration tests",
+]
