add --all-files to pre-commit ci execution

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -44,7 +44,7 @@ rule all:
     """Final target rule to run all necessary steps."""
     input:
         OUT_ROOT / f"results/{EXPERIMENT_HASH}/dashboard.html",
-        OUT_ROOT / f"results/{EXPERIMENT_HASH}/plot_metrics"
+        OUT_ROOT / f"results/{EXPERIMENT_HASH}/plot_metrics",
     default_target: True
 
 
