--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,4 +60,4 @@ jobs:
         uses: actions/setup-python@v5
 
       - name: Run pre-commit hooks
-        run: uvx pre-commit run
+        run: uvx pre-commit run --all-files
