--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,9 +55,14 @@ jobs:
 
       - name: Install uv
         uses: astral-sh/setup-uv@v2
+        with:
+          enable-cache: true
 
       - name: Set up Python
         uses: actions/setup-python@v5
 
+      - name: Install the project
+        run: uv sync --all-extras --dev
+
       - name: Run pre-commit hooks
-        run: uvx pre-commit run --all-files
+        run: uv pre-commit run --all-files
