refactor verif rules and improve logging

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -58,10 +58,10 @@ rule run_inference_all:
         ),
 
 
-rule run_verif_from_grib_all:
+rule verif_metrics_all:
     input:
         expand(
-            rules.run_verif_fct.output,
+            rules.verif_metrics.output,
             init_time=[t.strftime("%Y%m%d%H%M") for t in REFTIMES],
             run_id=collect_all_runs(),
         ),
@@ -73,10 +73,10 @@ rule run_verif_from_grib_all:
 #         expand(rules.extract_cosmoe_fcts.output.fcts, year=[str(y)[-2:] for y in range(2020, 2021)])
 
 
-rule run_verif_plot_metrics_all:
+rule verif_metrics_plot_all:
     """Run verification plot metrics for all studies."""
     input:
         expand(
-            rules.run_verif_plot_metrics.output,
+            rules.verif_metrics_plot.output,
             experiment=EXPERIMENT_HASH,
         ),
