--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "evalml"
-version = "0.1.0"
+version = "0.1.0-beta.1"
 description = "Evaluation CLI for ML models"
 readme = "README.md"
 authors = [
