fix environment generation, handle failure of inference

--- a/workflow/envs/anemoi_inference.toml
+++ b/workflow/envs/anemoi_inference.toml
@@ -6,13 +6,13 @@ dependencies = [
   "torch",
   "torchvision",
   "torchaudio",
-  "anemoi-datasets==0.5.23",
-  "anemoi-graphs==0.5.0",
-  "anemoi-inference==0.6.1",
-  "anemoi-models==0.4.2",
-  "anemoi-training==0.3.3",
-  "anemoi-transform==0.1.10",
-  "anemoi-utils==0.4.22",
+  "anemoi-datasets>=0.5.23,<0.7.0",
+  "anemoi-graphs>=0.5.0,<0.7.0",
+  "anemoi-inference>=0.6.1,<0.7.0",
+  "anemoi-models>=0.4.20,<0.6.0",
+  "anemoi-training>=0.3.3,<0.5.0",
+  "anemoi-transform>=0.1.10,<0.3.0",
+  "anemoi-utils>=0.4.22,<0.5.0",
   "eccodes==2.38.3",
   "eccodes-cosmo-resources-python"
 ]
