--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,8 +4,8 @@ description: |
 
 dates:
   start: 2020-01-01T12:00
-  # end: 2020-01-10T00:00
-  end: 2020-03-30T00:00
+  end: 2020-01-10T00:00
+  # end: 2020-03-30T00:00
   frequency: 54h
 
 lead_time: 120h
@@ -31,6 +31,9 @@ locations:
   mlflow_uri:
     - https://servicedepl.meteoswiss.ch/mlstore
     - https://mlflow.ecmwf.int
+
+verification:
+  valid_every: 12
 
 profile:
   executor: slurm
