--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -65,4 +65,4 @@ jobs:
         run: uv sync --all-extras --dev
 
       - name: Run pre-commit hooks
-        run: uv run pre-commit run --all-files
+        run: uv run pre-commit run --all-files --verbose
