--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "anemoi-datasets>=0.5.25",
     "mlflow>=3.1.1",
     "pydantic>=2.11.7",
+    "python-dotenv>=1.1.1",
 ]
 
 [project.optional-dependencies]
