--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "mlflow>=3.1.1",
     "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
+    "flox>=0.10.6",
 ]
 
 [project.optional-dependencies]
