--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ authors = [
 ]
 requires-python = ">=3.11"
 dependencies = [
-    "snakemake",
+    "snakemake<9.10",
     "snakemake-executor-plugin-slurm",
     "click",
     "meteodata-lab>=0.4.0",
@@ -17,6 +17,7 @@ dependencies = [
     "mlflow>=3.1.1",
     "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
+    "toml>=0.10.2",
 ]
 
 [project.optional-dependencies]
