use anemoi-inference fork for now

--- a/config/interpolators.yaml
+++ b/config/interpolators.yaml
@@ -15,8 +15,10 @@ runs:
       label: LAM Interpolator (M-1 forecaster)
       forecaster:
         run_id: d0846032fc7248a58b089cbe8fa4c511
+        config: resources/inference/configs/forecaster_with_global.yaml
       extra_dependencies:
-         - git+https://github.com/ecmwf/anemoi-inference@fix/interp_files
+         - git+https://github.com/MeteoSwiss/anemoi-inference@fix/interp_files
+        #  - git+https://github.com/ecmwf/anemoi-inference@fix/interp_files
          - torch-geometric==2.6.1
          - anemoi-graphs==0.5.2
   - interpolator:
@@ -27,7 +29,8 @@ runs:
         run_id: d0846032fc7248a58b089cbe8fa4c511
         config: resources/inference/configs/forecaster_with_global.yaml
       extra_dependencies:
-         - git+https://github.com/ecmwf/anemoi-inference@fix/interp_files
+         - git+https://github.com/MeteoSwiss/anemoi-inference@fix/interp_files
+        #  - git+https://github.com/ecmwf/anemoi-inference@fix/interp_files
          - torch-geometric==2.6.1
          - anemoi-graphs==0.5.2
 
