--- a/resources/inference/configs/interpolator.yaml
+++ b/resources/inference/configs/interpolator.yaml
@@ -10,7 +10,7 @@ post_processors:
 
 input:
   grib:
-    path: forecaster_grib/*.grib
+    path: forecaster_grib/20*.grib
     namer:
       rules:
         - - shortName: SKT
