MRB-471: Inference with interpolator model (#44)
* Trial comparison interpolator

* Update error message

* rename example configs

* update anemoi inference default configs

* implement shell directive in interpolator inference rule

* update tests

* remove unnecessary files

* status: lam interpolator works

* use anemoi-inference fork for now

* update anemoi-inference version requirement

* only use local files [temporary dirty fix]

* status: both lam and sgm interpolators work

* Add comment

---------

Co-authored-by: omiralles <ophelia.miralles@meteoswiss.ch>
Co-authored-by: Francesco Zanetta <francesco.zanetta@meteoswiss.ch>

--- a/resources/inference/configs/interpolator.yaml
+++ b/resources/inference/configs/interpolator.yaml
@@ -10,7 +10,7 @@ post_processors:
 
 input:
   grib:
-    path: grib
+    path: forecaster_grib/20*.grib # TODO: remove dirty fix to only use local files
     namer:
       rules:
         - - shortName: SKT
@@ -50,11 +50,11 @@ input:
 
 output:
   grib:
-    path: interp_grib/{dateTime}_{step:03}.grib
+    path: grib/{dateTime}_{step:03}.grib
     encoding:
       typeOfGeneratingProcess: 2
     templates:
-      samples: /users/fzanetta/projects/ml-pilot-anemoi/inference/configs/templates_index.yaml
+      samples: _resources/templates_index_cosmo.yaml
 
 forcings:
   test:
