Configurable baselines and analyses

--- a/config/forecasters.yaml
+++ b/config/forecasters.yaml
@@ -23,16 +23,21 @@ runs:
       run_id: d0846032fc7248a58b089cbe8fa4c511
       label: M-1 forecaster
 
-baseline: COSMO-E
+baselines:
+  - baseline:
+      baseline_id: COSMO-E
+      label: COSMO-E
+      root: /store_new/mch/msopr/ml/COSMO-E
+
+analysis:
+  label: COSMO KENDA
+  zarr_dataset: /scratch/mch/fzanetta/data/anemoi/datasets/mch-co2-an-archive-0p02-2015-2020-6h-v3-pl13.zarr
 
 locations:
   output_root: output/
   mlflow_uri:
     - https://servicedepl.meteoswiss.ch/mlstore
     - https://mlflow.ecmwf.int
-
-verification:
-  valid_every: 12
 
 profile:
   executor: slurm
