--- a/config/interpolators.yaml
+++ b/config/interpolators.yaml
@@ -5,7 +5,7 @@ description: |
 dates:
   start: 2020-01-01T12:00
   end: 2020-01-10T00:00
-  frequency: 54h
+  frequency: 36h
 
 lead_time: 120h
 
@@ -39,10 +39,12 @@ baselines:
       baseline_id: COSMO-E-1h
       label: COSMO-E
       root: /scratch/mch/bhendj/COSMO-E
+      steps: 0/121/1
   - baseline:
       baseline_id: COSMO-E-6h
       label: COSMO-E
       root: /store_new/mch/msopr/ml/COSMO-E
+      steps: 0/126/6
 
 analysis:
   label: COSMO KENDA
