Add steps for interpolator

--- a/config/interpolators.yaml
+++ b/config/interpolators.yaml
@@ -13,6 +13,7 @@ runs:
   - interpolator:
       run_id: 9c18b90074214d769b8b383722fc5a06
       label: LAM Interpolator (M-1 forecaster)
+      steps: 0/121/1
       forecaster:
         run_id: d0846032fc7248a58b089cbe8fa4c511
         config: resources/inference/configs/forecaster_with_global.yaml
@@ -24,6 +25,7 @@ runs:
   - interpolator:
       run_id: 07c3d9698db14d859b78bb712a65bbbf
       label: SGM Interpolator (M-1 forecaster)
+      steps: 0/121/1
       config: resources/inference/configs/interpolator_stretched.yaml
       forecaster:
         run_id: d0846032fc7248a58b089cbe8fa4c511
